--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,18 +1,16 @@
 {
-  "extends": "@remoola/typescript-config/nestjs.json",
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "strictNullChecks": true
+    "skipLibCheck": true
   },
   "include": [
-    "**/*.ts",
+    "src",
     "prisma.config.ts"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
