--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "db:seed": "turbo run db:seed",
     "dev": "turbo run dev --parallel",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "generate": "turbo run generate",
+    "db:generate": "turbo run db:generate",
     "postinstall": "turbo run build --filter=\"./packages/*\"",
     "lint": "turbo run lint",
     "start": "turbo run start --parallel",
