--- a/apps/api-wirebill-split/package.json
+++ b/apps/api-wirebill-split/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@remoola/api",
+  "name": "@remoola/api-wirebill-split",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "yarn migrate:up && nest build",
+    "build": "nest build",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -15,9 +15,7 @@
     "clean": "rimraf node_modules",
     "dev:envs": "dotenv -e ./.env.development -e ./.env --",
     "start:dev": "yarn dev:envs nest start --watch",
-    "dev": "yarn start:dev",
-    "migrate:up": "yarn dev:envs typeorm-ts-node-commonjs migration:run -d ./src/config/orm.config.ts",
-    "migrate:up2": "yarn build && yarn dev:envs typeorm migration:run -- -d ./dist/config/orm.config.js"
+    "dev": "yarn start:dev"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.872.0",
@@ -33,6 +31,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@remoola/api-types": "^0.0.0",
+    "@remoola/database": "^0.0.0",
     "@remoola/env": "^0.0.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.0",
@@ -69,6 +68,7 @@
     "@remoola/typescript-config": "^0.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
