--- a/apps/api-wirebill/package.json
+++ b/apps/api-wirebill/package.json
@@ -42,6 +42,7 @@
     "dotenv-cli": "^10.0.0",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
