--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "db:pull": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma db pull"
   }
 }
