--- a/apps/api-wirebill-split/package.json
+++ b/apps/api-wirebill-split/package.json
@@ -48,12 +48,15 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "multer": "^2.0.2",
+    "nestjs-stripe": "^1.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "puppeteer": "^24.29.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "stripe": "^20.0.0",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.0.17"
   },
@@ -74,6 +77,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.17.20",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
