--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -12,9 +12,12 @@
     "clean": "rimraf node_modules .next"
   },
   "dependencies": {
-    "@remoola/ui": "^0.0.0",
     "@remoola/database": "^0.0.0",
+    "@remoola/ui": "^0.0.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.5.3",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.555.0",
     "next": "15.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
