--- a/apps/api-wirebill-split/package.json
+++ b/apps/api-wirebill-split/package.json
@@ -31,6 +31,7 @@
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@ngrok/ngrok": "^1.6.0",
     "@remoola/api-types": "^0.0.0",
     "@remoola/database": "^0.0.0",
     "@remoola/env": "^0.0.0",
