--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build",
+    "build": "yarn workspace @remoola/database run db:generate && turbo run build",
     "clean": "turbo run clean && rimraf node_modules",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
@@ -34,8 +34,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
-    "rimraf": "^6.0.1",
-    "typeorm": "^0.3.26"
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@remoola/eslint-config": "^0.0.0",
