--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -23,6 +23,8 @@
     "tsup": "^8.5.0"
   },
   "scripts": {
+    "clean": "rm -rf ./node_modules ./dist ./generated/**",
+    "postinstall": "prisma generate",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:pull": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma db pull"
