--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
-    "clean": "rimraf node_modules .next"
+    "clean": "rm -rf ./node_modules ./.next"
   },
   "dependencies": {
     "@remoola/database": "^0.0.0",
