--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -28,6 +28,6 @@
     "typescript-eslint": "^8.37.0"
   },
   "scripts": {
-    "clean": "rimraf node_modules"
+    "clean": "rm -rf ./node_modules ./dist"
   }
 }
