--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
-    "clean": "rimraf node_modules"
+    "clean": "rm -rf ./node_modules ./dist"
   },
   "sideEffects": [
     "src/styles.css"
