--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "yarn workspace @remoola/database run db:generate && turbo run build",
-    "clean": "turbo run clean && rimraf node_modules",
+    "clean": "turbo run clean && rm -rf node_modules",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
     "db:push": "turbo run db:push",
