--- a/turbo.json
+++ b/turbo.json
@@ -32,7 +32,18 @@
     "GOOGLE_CLIENT_ID",
     "GOOGLE_CLIENT_SECRET",
     "NEST_APP_EXTERNAL_ORIGIN",
-    "ADMIN_EMAIL"
+    "ADMIN_EMAIL",
+    "NODEMAILER_SMTP_HOST",
+    "NODEMAILER_SMTP_PORT",
+    "NODEMAILER_SMTP_USER",
+    "NODEMAILER_SMTP_USER_PASS",
+    "NODEMAILER_SMTP_DEFAULT_FROM",
+    "GOOGLE_API_KEY",
+    "GOOGLE_CALENDAR_SCOPES",
+    "STRIPE_PUBLISHABLE_KEY",
+    "STRIPE_SECRET_KEY",
+    "STRIPE_WEBHOOK_SECRET",
+    "STRIPE_WEBHOOK_SECRET_BILLING"
   ],
   "ui": "stream",
   "globalDependencies": [
