--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "yarn workspace @remoola/database run db:generate && turbo run build",
+    "build": "yarn workspace @remoola/database-2 run db:generate && turbo run build",
     "clean": "turbo run clean && rm -rf node_modules",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
