--- a/packages/database-2/package.json
+++ b/packages/database-2/package.json
@@ -7,9 +7,12 @@
     "build": "tsc -b -v",
     "clean": "rm -rf ./node_modules ./dist ./generated/**",
     "postinstall": "npx prisma generate",
-    "db:deploy": "npx prisma migrate deploy",
+    "db:deploy": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma migrate deploy",
+    "db:studio": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma studio",
     "db:generate": "npx prisma generate",
-    "db:migrate": "npx prisma migrate dev --skip-generate"
+    "db:migrate": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\"  prisma migrate dev --skip-generate",
+    "db:push": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma db push",
+    "db:reset": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma migrate reset"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0"
