--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -28,7 +28,9 @@
     }
   },
   "dependencies": {
-    "@nestjs/mapped-types": "*"
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/mapped-types": "*",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@remoola/eslint-config": "^0.0.0",
