--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "zod": "^4.0.17"
   },
