--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@remoola/ui": "^0.0.0",
+    "@remoola/api-types": "^0.0.0",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.5.3",
     "framer-motion": "^12.23.24",
