--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,8 +31,9 @@
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@ngrok/ngrok": "^1.6.0",
-    "@remoola/database-2": "^0.0.0",
     "@remoola/api-types": "^0.0.0",
+    "@remoola/database-2": "^0.0.0",
+    "@sparticuz/chromium": "^143.0.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.0",
     "class-transformer": "^0.5.1",
@@ -53,7 +54,7 @@
     "passport-jwt": "^4.0.1",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
-    "puppeteer": "^24.29.0",
+    "puppeteer-core": "^24.33.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^20.0.0",
