--- a/turbo.json
+++ b/turbo.json
@@ -43,7 +43,11 @@
     "STRIPE_PUBLISHABLE_KEY",
     "STRIPE_SECRET_KEY",
     "STRIPE_WEBHOOK_SECRET",
-    "STRIPE_WEBHOOK_SECRET_BILLING"
+    "STRIPE_WEBHOOK_SECRET_BILLING",
+    "AWS_FILE_UPLOAD_MAX_SIZE_BYTES",
+    "AWS_ACCESS_KEY_ID",
+    "AWS_SECRET_ACCESS_KEY",
+    "AWS_BUCKET"
   ],
   "ui": "stream",
   "globalDependencies": [
