--- a/turbo.json
+++ b/turbo.json
@@ -47,7 +47,9 @@
     "AWS_FILE_UPLOAD_MAX_SIZE_BYTES",
     "AWS_ACCESS_KEY_ID",
     "AWS_SECRET_ACCESS_KEY",
-    "AWS_BUCKET"
+    "AWS_BUCKET",
+    "TURBO_TELEMETRY_DISABLED",
+    "DO_NOT_TRACK"
   ],
   "ui": "stream",
   "globalDependencies": [
