--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@remoola/admin",
   "version": "0.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 3010",
