Update default admin credentials with more descriptive email addresses and stronger passwords

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -28,10 +28,10 @@ JWT_REFRESH_TTL=604800000
 JWT_EXPIRES_IN=15m
 
 # Admin Default Credentials (for seeding)
-DEFAULT_ADMIN_EMAIL=admin@wirebill.com
-DEFAULT_ADMIN_PASSWORD=Admin@123!
-SUPER_ADMIN_EMAIL=super@wirebill.com
-SUPER_ADMIN_PASSWORD=Super@123!
+DEFAULT_ADMIN_EMAIL=regular.admin@wirebill.com
+DEFAULT_ADMIN_PASSWORD=RegularWirebill@Admin123!
+SUPER_ADMIN_EMAIL=super.admin@wirebill.com
+SUPER_ADMIN_PASSWORD=SuperWirebill@Admin123!
 
 # Security & Cookies
 SECURE_SESSION_SECRET=your-secure-session-secret-here
@@ -69,7 +69,7 @@ NODEMAILER_SMTP_USER_PASS=your-app-password
 NODEMAILER_SMTP_DEFAULT_FROM=noreply@wirebill.com
 
 # Admin Configuration
-ADMIN_EMAIL=admin@wirebill.com
+ADMIN_EMAIL=regular.admin@wirebill.com
 
 # External Services
 NEST_APP_EXTERNAL_ORIGIN=http://localhost:3333/api
