refactor(consumer): move UI class names to CSS modules
- Move consumer UI class names into `classNames.module.css`
- Replace Tailwind class constants with direct CSS module usage
- Remove legacy TypeScript class-name helper
- Fix dark mode by syncing theme classes/data attributes
- Update dark-mode selectors to match new theme handling

--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -12,8 +12,8 @@
     "clean": "rm -rf ./node_modules ./.next"
   },
   "dependencies": {
-    "@remoola/ui": "^0.0.0",
     "@remoola/api-types": "^0.0.0",
+    "@remoola/ui": "^0.0.0",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.5.3",
     "framer-motion": "^12.23.24",
@@ -35,6 +35,7 @@
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.5.2",
+    "sass": "^1.97.3",
     "tailwindcss": "^4",
     "typescript": "5.8.2"
   }
