--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.5.2",
+    "sass": "^1.97.3",
     "tailwindcss": "^4",
     "typescript": "5.8.2"
   }
