feat(consumer): add Google OAuth with signup flow integration
- Google OAuth for consumers(PKCE-based)
- Route new users into existing signup flow with prefilled profile data
- Harden OAuth state handling and validation
- Update login UI to support Google sign-in
- Extend env configuration for Google OAuth settings
- Adjust cookie handling to support OAuth-based authentication

--- a/packages/env/.env.example
+++ b/packages/env/.env.example
@@ -43,7 +43,7 @@ SUPER_ADMIN_PASSWORD=SuperWirebill@Admin123!
 # Security & Cookies
 SECURE_SESSION_SECRET=your-secure-session-secret-here
 COOKIE_SECURE=false
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+CORS_ALLOWED_ORIGINS=http://localhost:3010,http://localhost:3001
 
 # AWS S3 Configuration
 AWS_REGION=us-east-1
@@ -78,6 +78,7 @@ ADMIN_EMAIL=regular.admin@wirebill.com
 
 # External Services
 NEST_APP_EXTERNAL_ORIGIN=http://localhost:3333/api
+CONSUMER_APP_ORIGIN=http://localhost:3001
 
 # Ngrok Configuration (for development)
 NGROK_AUTH_TOKEN=your-ngrok-auth-token
