feat(exchange): add robust exchange rate management
- Introduce versioned exchange rates with approval workflow
- Store provider metadata and handle rate staleness
- Add admin and consumer API endpoints
- Update UI for managing and viewing exchange rates
- Apply currency-aware rounding rules
- Backfill migration and enforce new uniqueness constraints

--- a/turbo.json
+++ b/turbo.json
@@ -44,6 +44,7 @@
     "NODEMAILER_SMTP_DEFAULT_FROM",
     "GOOGLE_API_KEY",
     "GOOGLE_CALENDAR_SCOPES",
+    "EXCHANGE_RATE_MAX_AGE_HOURS",
     "STRIPE_PUBLISHABLE_KEY",
     "STRIPE_SECRET_KEY",
     "STRIPE_WEBHOOK_SECRET",
