--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "test": "turbo run test",
     "test:e2e": "turbo run test:e2e",
     "dev:api": "yarn workspace @remoola/api run dev",
+    "lint:api": "yarn workspace @remoola/api run lint",
+    "lint:fix:api": "yarn workspace @remoola/api run lint --fix",
     "dev:consumer": "yarn workspace @remoola/consumer run dev",
+    "lint:consumer": "yarn workspace @remoola/consumer run lint",
+    "lint:fix:consumer": "yarn workspace @remoola/consumer run lint --fix",
     "dev:admin": "yarn workspace @remoola/admin run dev",
+    "lint:admin": "yarn workspace @remoola/admin run lint",
+    "lint:fix:admin": "yarn workspace @remoola/admin run lint --fix",
     "turbo:dev:api": "turbo run dev --filter=@remoola/api",
     "turbo:dev:consumer": "turbo run dev --filter=@remoola/consumer",
     "turbo:dev:admin": "turbo run dev --filter=@remoola/admin"
