--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.555.0",
     "next": "15.5.7",
     "react": "^19.1.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
@@ -32,6 +33,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.5.2",
