--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
+    "test": "jest",
     "clean": "rm -rf ./node_modules ./.next"
   },
   "dependencies": {
@@ -31,14 +32,18 @@
     "@remoola/eslint-config": "^0.0.0",
     "@remoola/typescript-config": "^0.0.0",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.5.2",
+    "jest": "^30.2.0",
     "sass": "^1.97.3",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "5.8.2"
   }
 }
