refactor(api): centralize env config and prepare for Vercel
- Replace process.env with envs in auth, health, mailing, exchange
- Remove unused exports from envs.ts (NODE_ENV, S3_*, POSTGRES_*, etc.)
- Use zBoolean for COOKIE_SECURE, LONG_LOGS_ENABLED, DEBUG_ALLOWED
- Add Vercel CORS origins (admin, consumer, api .vercel.app)
- Skip ngrok when VERCEL=1
- Require AWS_BUCKET for file uploads on Vercel
- Add CONSUMER_APP_ORIGIN to turbo.json globalEnv

--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,7 @@
     "COOKIE_SECURE",
     "SECURE_SESSION_SECRET",
     "CORS_ALLOWED_ORIGINS",
+    "CONSUMER_APP_ORIGIN",
     "DEFAULT_ADMIN_EMAIL",
     "DEFAULT_ADMIN_PASSWORD",
     "SUPER_ADMIN_EMAIL",
