--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ POSTGRES_SSL=false
 POSTGRES_TIMEZONE=UTC
 
 # Redis Configuration (Optional)
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
 REDIS_URL=redis://localhost:6379
 
 # JWT Configuration
@@ -41,7 +44,7 @@ SECURE_SESSION_SECRET=your-secure-session-secret-here
 COOKIE_SECURE=false
 
 # CORS Configuration
-CORS_ALLOWED_ORIGINS=http://localhost:3010,http://localhost:3001
+CORS_ALLOWED_ORIGINS=http://localhost:3010,http://localhost:3001,https://remoola-turbo-2-admin.vercel.app,https://remoola-turbo-2-consumer.vercel.app,https://remoola-turbo-2-api.vercel.app
 
 # AWS S3 Configuration
 AWS_REGION=us-east-1
@@ -78,6 +81,7 @@ ADMIN_EMAIL=regular.admin@wirebill.com
 # External Services
 NEST_APP_EXTERNAL_ORIGIN=http://localhost:3333/api
 CONSUMER_APP_ORIGIN=http://localhost:3001
+ADMIN_APP_ORIGIN=http://localhost:3010
 
 # Ngrok Configuration (for development)
 NGROK_AUTH_TOKEN=your-ngrok-auth-token
