--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -62,6 +62,7 @@
     "rxjs": "^7.8.1",
     "stripe": "^20.0.0",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
