--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -43,6 +43,7 @@
     "eslint": "^9.31.0",
     "eslint-config-next": "15.5.2",
     "jest": "^30.2.0",
+    "postcss": "^8.5.6",
     "sass": "^1.97.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.6",
