--- a/packages/database-2/package.json
+++ b/packages/database-2/package.json
@@ -15,7 +15,9 @@
     "db:reset": "DATABASE_URL=\"postgresql://neondb_owner:npg_hgTsd5jFfaR0@ep-restless-sky-ad6zq6qf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require\" prisma migrate reset"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0"
+    "@prisma/client": "^6.18.0",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^10.0.0"
   },
   "devDependencies": {
     "prisma": "^6.18.0"
