--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,5 +39,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
+  },
+  "peerDependencies": {
+    "next": ">=15"
   }
 }
