--- a/packages/database-2/package.json
+++ b/packages/database-2/package.json
@@ -16,8 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
-    "dotenv": "^17.2.3",
-    "dotenv-cli": "^10.0.0"
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "prisma": "^6.18.0"
