chore(api): prune unused runtime dependencies after dead-code audit
- Remove unreferenced `apps/api` dependencies:
  - `@aws-sdk/s3-request-presigner`
  - `@nestjs/bullmq`
  - `@nestjs/config`
  - `bullmq`
  - `jwt-decode`
  - `multer`
  - `nestjs-stripe`
  - `pdfkit`
  - `pg`
  - `swagger-ui-express`
- Refresh lockfile to reduce dependency surface
- Preserve existing API and Swagger runtime behavior

--- a/turbo.json
+++ b/turbo.json
@@ -58,7 +58,8 @@
     "AWS_BUCKET",
     "TURBO_TELEMETRY_DISABLED",
     "DO_NOT_TRACK",
-    "HELMET_ENABLED"
+    "HELMET_ENABLED",
+    "NO_COLOR"
   ],
   "ui": "stream",
   "globalDependencies": [
