--- a/packages/api-types/package.json
+++ b/packages/api-types/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "clean": "rm -rf ./node_modules ./dist"
   },
-  "main": "./dist/entry.js",
-  "types": "./dist/entry.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "./dist/**"
   ],
@@ -19,19 +19,15 @@
   },
   "exports": {
     ".": {
-      "import": "./dist/entry.js",
-      "require": "./dist/entry.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     },
     "./*": {
       "import": "./dist/*.js",
       "require": "./dist/*.js"
     }
   },
-  "dependencies": {
-    "@nestjs/common": "^11.1.9",
-    "@nestjs/mapped-types": "*",
-    "reflect-metadata": "^0.2.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@remoola/eslint-config": "^0.0.0",
     "@remoola/typescript-config": "^0.0.0",
