--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,6 +12,7 @@
     "clean": "rm -rf ./node_modules ./.next"
   },
   "dependencies": {
+    "@remoola/api-types": "^0.0.0",
     "@remoola/ui": "^0.0.0",
     "next": "15.5.7",
     "react": "^19.1.0",
