--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "@ngrok/ngrok": "^1.6.0",
     "@remoola/api-types": "^0.0.0",
     "@remoola/database-2": "^0.0.0",
+    "@remoola/security-utils": "^0.0.0",
     "@sparticuz/chromium": "^143.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
