feat(testing): add isolated temporary test DB harness with local-only guards
- Introduce `@remoola/test-db` package to spin up per-file temporary Postgres instances
  - Use `docker-compose` with `testcontainers` fallback
  - Run migrations and seed fixtures automatically
- Enforce strict isolation from local development DB
- Wire API and consumer test scripts to use memory-guarded local-only runner
- Integrate with pre-commit workflow for safe test execution
- Add targeted DB isolation and e2e test updates
- Tighten build/lint config to keep Vercel-safe production paths clean

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,10 +7,12 @@
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "pretest": "node ../../scripts/ensure-local-development.js api:pretest && yarn workspace @remoola/test-db build",
+    "test": "node ../../scripts/ensure-local-development.js api:test && node ../../scripts/run-jest-with-memory-cap.js",
+    "test:watch": "node ../../scripts/ensure-local-development.js api:test:watch && node ../../scripts/run-jest-with-memory-cap.js --watch",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "pretest:e2e": "node ../../scripts/ensure-local-development.js api:pretest:e2e && yarn workspace @remoola/test-db build",
+    "test:e2e": "node ../../scripts/ensure-local-development.js api:test:e2e && node ../../scripts/run-jest-with-memory-cap.js --config ./test/jest-e2e.json",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "clean": "rm -rf ./node_modules ./dist",
     "dev:envs": "dotenv -e ./.env.development -e ./.env --",
@@ -62,6 +64,7 @@
     "@nestjs/testing": "^11.0.0",
     "@remoola/eslint-config": "^0.0.0",
     "@remoola/jest-config": "^0.0.0",
+    "@remoola/test-db": "^0.0.0",
     "@remoola/typescript-config": "^0.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.17",
