--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "yarn workspace @remoola/database-2 run db:generate && turbo run build",
+    "build:vercel-guard": "yarn workspace @remoola/api build && yarn workspace @remoola/consumer build && yarn workspace @remoola/admin build",
     "clean": "turbo run clean && rm -rf node_modules",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
@@ -20,11 +21,11 @@
     "dev": "turbo run dev --parallel",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "db:generate": "turbo run db:generate",
-    "postinstall": "turbo run build --filter=\"./packages/*\"",
+    "postinstall": "turbo run build --filter=\"./packages/*\" --filter=\"!@remoola/db-fixtures\" --filter=\"!@remoola/test-db\"",
     "lint": "turbo run lint",
     "start": "turbo run start --parallel",
-    "test": "turbo run test",
-    "test:e2e": "turbo run test:e2e",
+    "test": "node ./scripts/ensure-local-development.js root:test && turbo run test",
+    "test:e2e": "node ./scripts/ensure-local-development.js root:test:e2e && turbo run test:e2e",
     "dev:api": "yarn workspace @remoola/api run dev",
     "lint:api": "yarn workspace @remoola/api run lint",
     "lint:fix:api": "yarn workspace @remoola/api run lint --fix",
