--- a/packages/security-utils/package.json
+++ b/packages/security-utils/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "yarn build --watch",
-    "build": "tsc -b -v",
+    "build": "tsc -b",
     "lint": "eslint \"src/**/*.ts\"",
     "clean": "rm -rf ./node_modules ./dist"
   },
