--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,8 @@
     "NEXT_PUBLIC_API_BASE_URL",
     "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY",
     "DATABASE_URL",
+    "TEST_DATABASE_URL",
+    "TEST_DB_PROVIDER",
     "REDIS_URL",
     "OPENAI_API_KEY",
     "JWT_EXPIRES_IN",
