--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,7 @@
     "SECURE_SESSION_SECRET",
     "CORS_ALLOWED_ORIGINS",
     "CONSUMER_APP_ORIGIN",
+    "ADMIN_APP_ORIGIN",
     "DEFAULT_ADMIN_EMAIL",
     "DEFAULT_ADMIN_PASSWORD",
     "SUPER_ADMIN_EMAIL",
