feat(testing): add isolated test-db harness and harden Vercel build scope
Add a local-only temporary database workflow for tests and tighten Turbo/Vercel build behavior so app-only builds do not pull test-only workspaces or fail on private workspace resolution.

Includes original commit scope:
- Add ADMIN_APP_ORIGIN to turbo.json environment variables
- Remove @remoola/test-db from app devDependencies to keep turbo app build graphs scoped
- Remove @remoola/db-fixtures runtime dependency from @remoola/test-db to avoid CI/Vercel npm resolution failures
- Add isolated temporary test DB harness with local-only guards, memory-guarded runners, and targeted test updates

Preserved details from prior commit bodies:
- Introduce @remoola/test-db for per-file temporary Postgres
- Prefer docker-compose with testcontainers fallback
- Run migrations and fixture seeding for temporary databases
- Enforce isolation from local development DB
- Keep production and Vercel builds focused on required runtime packages only

--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit",
-    "test": "jest",
+    "pretest": "node ../../scripts/ensure-local-development.js consumer:pretest && yarn workspace @remoola/test-db build",
+    "test": "node ../../scripts/ensure-local-development.js consumer:test && node ../../scripts/run-jest-with-memory-cap.js",
     "clean": "rm -rf ./node_modules ./.next"
   },
   "dependencies": {
