--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,8 @@
     "NEXT_PUBLIC_API_BASE_URL",
     "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY",
     "DATABASE_URL",
+    "TEST_DATABASE_URL",
+    "TEST_DB_PROVIDER",
     "REDIS_URL",
     "OPENAI_API_KEY",
     "JWT_EXPIRES_IN",
@@ -26,6 +28,7 @@
     "SECURE_SESSION_SECRET",
     "CORS_ALLOWED_ORIGINS",
     "CONSUMER_APP_ORIGIN",
+    "ADMIN_APP_ORIGIN",
     "DEFAULT_ADMIN_EMAIL",
     "DEFAULT_ADMIN_PASSWORD",
     "SUPER_ADMIN_EMAIL",
