chore: tighten auth typing, reduce noisy logging & align consumer test config
- Remove unnecessary `@remoola/database-2` transpilation from admin Next config
- Replace untyped auth login bodies with typed DTOs
- Use `NotFoundException` for contact lookups
- Redact recipient details from mailer success logs
- Remove debug logs from consumer API routes
- Switch consumer Jest config to shared `@remoola/jest-config` and add dependency
- Add PostgreSQL design rules documentation

--- a/apps/consumer/package.json
+++ b/apps/consumer/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@remoola/eslint-config": "^0.0.0",
+    "@remoola/jest-config": "^0.0.0",
     "@remoola/typescript-config": "^0.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^30.0.0",
