--- a/packages/database-2/package.json
+++ b/packages/database-2/package.json
@@ -7,7 +7,13 @@
     "db:generate": "npx prisma generate",
     "build": "yarn db:generate && tsc -p tsconfig.build.json",
     "clean": "rm -rf ./node_modules ./dist ./generated/**",
-    "postinstall": "npx prisma generate"
+    "postinstall": "npx prisma generate",
+    "db:deploy": "npx prisma migrate deploy",
+    "db:studio": "npx prisma studio",
+    "db:migrate": "npx prisma migrate dev",
+    "db:migrate:skip:generate": "npx prisma migrate dev --skip-generate",
+    "db:push": "npx prisma db push",
+    "db:reset": "npx prisma migrate reset"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
