feat(shared-constants): shared error codes and consumer error messages
- Add packages/shared-constants with canonical error codes (one per API throw site)
- API consumer modules: throw errorCodes instead of string messages (payments, auth, contacts, exchange, stripe, documents, invoice)
- Consumer: add error-messages.ts with getErrorMessageForUser (API codes) and getLocalToastMessage (client toasts)
- WithdrawForm/TransferForm: parse API error body and show mapped user messages
- Contacts and payment-requests/new: wrap useSearchParams() components in Suspense for prerender

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
     "@nestjs/throttler": "^6.3.0",
     "@ngrok/ngrok": "^1.6.0",
     "@remoola/api-types": "^0.0.0",
+    "@remoola/shared-constants": "^0.0.0",
     "@remoola/database-2": "^0.0.0",
     "@remoola/security-utils": "^0.0.0",
     "@sparticuz/chromium": "^143.0.0",
