--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "yarn workspace @remoola/database-2 run db:generate && turbo run build",
-    "build:vercel-guard": "yarn workspace @remoola/api build && yarn workspace @remoola/consumer build && yarn workspace @remoola/admin build",
+    "build:vercel-guard": "turbo run build --filter=@remoola/api --filter=@remoola/consumer --filter=@remoola/admin",
     "clean": "turbo run clean && rm -rf node_modules",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
     "db:migrate:dev": "turbo run db:migrate:dev",
