--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@remoola/api-types": "^0.0.0",
+    "@remoola/shared-constants": "^0.0.0",
     "@remoola/ui": "^0.0.0",
     "next": "15.5.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "zod": "^4.0.17"
   },
